Avoid overflow from embedded attachment

--- a/app/theme/client/imports/components/messages.css
+++ b/app/theme/client/imports/components/messages.css
@@ -138,6 +138,10 @@
 	}
 }
 
+.message-oembed {
+	overflow: hidden;
+}
+
 .messages-box .rc-popover__list {
 	padding: 0;
 }
